# HybridControlBoard

./: Computer_System.qsys  Computer_System.sopcinfo  DE0_Nano_SoC_Computer.asm.rpt  DE0_Nano_SoC_Computer.done  DE0_Nano_SoC_Computer.fit.rpt  DE0_Nano_SoC_Computer.fit.summary  DE0_Nano_SoC_Computer.flow.rpt  DE0_Nano_SoC_Computer.jdi  DE0_Nano_SoC_Computer.map.smsg  DE0_Nano_SoC_Computer.map.summary  DE0_Nano_SoC_Computer.pin  DE0_Nano_SoC_Computer.qpf  DE0_Nano_SoC_Computer.qsf  DE0_Nano_SoC_Computer.qws  DE0_Nano_SoC_Computer.sdc  DE0_Nano_SoC_Computer.sld  DE0_Nano_SoC_Computer.sta.summary  DE0_Nano_SoC_Computer.v  DE0_Nano_SoC_Computer.v.bak  README.md  SPI Controller.vhd  SPI Controller.vhd.bak  Tw00KHZ.vhd  hps_sdram_p0_summary.csv  servo.vhd  spi_controller_hw.tcl  spi_controller_hw.tcl~  tstreg.vhd  tstreg.vhd.bak
c_src/: CMakeLists.txt  README.md  c_code.amp  main.c
c_src/src/: Adc.c  Adc.h  CMakeLists.txt  CanLogical.c  CanLogical.h  CanPhysical.c  CanPhysical.h  Error.c  Error.h  Queue.c  Queue.h  SpiController.c  SpiController.h  SpiHardware.c  SpiHardware.h  address_map.h
c_src/tests/: AdcTests.cpp  CANLogicalTests.cpp  CANPhysicalTests.cpp  CMakeLists.txt  MockCanPhysical.c  MockError.c  MockSpiController.c  MockSpiController.h  MockSpiHardware.c  QueueTests.cpp  RunAllTests.cpp  SpiControllerTests.cpp  SpiHardwareTests.cpp
